resources/css/app.css
@import "../../node_modules/highlight.js/styles/default.css";
@import "../../node_modules/highlight.js/styles/tomorrow-night.css";

@import "../../node_modules/@fortawesome/fontawesome-free/css/all.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

.prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
    margin-bottom: 0;
    font-weight: 500;
}

.prose img {
    margin-left: auto;
    margin-right: auto;
}

.prose pre code {
    white-space: pre-wrap;
}

.prose p code {
    padding: .2em .4em;
    border-radius: 6px;
    background: #f6f8fa;
    @apply text-base;
    @apply font-sans;
    @apply font-normal;
}

.prose p code:after, .prose p code:before {
    content: "";
}

